--- a/index.html
+++ b/index.html
@@ -1,25 +1,39 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>Pokemon List</title>
-    <link rel="stylesheet" href="style.css" />
-    <script defer src="main.js"></script>
-  </head>
-  <body>
-    <header>
-      <h1>Pokemon List</h1>
-      <div class="contact">
-        <a href="contact.html">Contact us </a>
-      </div>
-    </header>
-    <main>
-      <div class="paragraph">
-        <p>Here is a list of the 20 first pokemons in the pokedex.</p>
-        <p>Click on them to get more information!</p>
-      </div>
-      <ul class="pokemon-list"></ul>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="List-page" content="List of 20 pokemons" />
+  <title>Pokemon list</title>
+  <link rel="stylesheet" href="style.css" />
+  <script defer src="main.js"></script>
+</head>
+<body>
+  <header>
+    <h1>Pokemon List</h1>
+    <div class="contact">
+      <a href="contact.html">Contact us </a>
+    </div>
+  </header>
+  <main>
+    <div class="paragraph">
+      <p>Here is a list of the 20 first pokemons in the pokedex.</p>
+      <p>Click on them to get more information!</p>
+    </div>
+    <ul class="pokemon-list"></ul>
 
-      <div class="loader"></div>
-    </main>
-  </body>
+    <div class="loader"></div>
+  </main>
+</body>
 </html>
+
+
+
+
+
+
+
+
+
+
